# g4tutorial2024

./: LICENSE  README.md
P03_C++ForG4Users_Homework/C01_HelloWorld/: AAA_Instruction.txt  C01_HelloWorld.cc
P03_C++ForG4Users_Homework/C02_WhatIsObject/: AAA_Instruction.txt  C02_WhatIsObject.cc
P03_C++ForG4Users_Homework/C03_WhatIsClass/: AAA_Instruction.txt  C03_WhatIsClass.cc
P03_C++ForG4Users_Homework/C03_WhatIsClass/UsageHeaderFiles/: AAA_Instruction.txt  Rectangle.cc  Rectangle.hh  main.cc
P03_C++ForG4Users_Homework/C04_ObjectLifetime/: AAA_Instruction.txt  C04_ObjectLifetime.cc
P03_C++ForG4Users_Homework/C05_Inheritance_VirtualFunction/: AAA_Instruction.txt  C05_Inheritance_VirtualFunction.cc
P03_C++ForG4Users_Homework/C05_Inheritance_VirtualFunction/UsageHeaderFiles/: AAA_Instruction.txt  Ellipse.cc  Ellipse.hh  Rectangle.cc  Rectangle.hh  Shape_2P.cc  Shape_2P.hh  main.cc
P03_C++ForG4Users_Homework/Z_AnswersDir/: C01_HelloWorld_Ans.cc  C02_WhatIsObject_Ans.cc  C03_WhatIsClass_Ans.cc  C04_ObjectLifetime_Ans.cc  C05_Inheritance_VirtualFunction_Ans.cc
P05_FirstStep/WaterBox/source/src/: Geometry.cc
P06_Geometry/BGO_Two/source/src/: Geometry.cc
P06_Geometry/Pixel_Four/source/: Application_Main.cc  CMakeLists.txt
P06_Geometry/Pixel_Four/source/src/: Geometry.cc
P06_Geometry/Pixel_One/source/src/: Geometry.cc
P06_Geometry/WaterBox/source/: Application_Main.cc
P06_Geometry/WaterBox/source/include/: PrimaryGenerator.hh
P06_Geometry/WaterContainer/source/src/: Geometry.cc
P06_Geometry/WaterExtruded/source/src/: Geometry.cc
P07_PrimaryGenerator/GPS/source/include/: PrimaryGenerator.hh
P07_PrimaryGenerator/MyGen_MagField/TestBench/: primaryGeneratorSetup.mac
P08_PhysicsLists/Factory/source/: Application_Main.cc
P08_PhysicsLists/MyPhysicsList/source/: Application_Main.cc
P09_Scoring1/BGO_Two_Output/TestBench/: P09.ipynb  electron1GeV.mac
P09_Scoring1/BGO_Two_Output/source/: Application_Main.cc
P09_Scoring1/BGO_Two_SD/TestBench/: muon.mac
P09_Scoring1/BGO_Two_SD/source/: Application_Main.cc
P09_Scoring1/BGO_Two_SD/util/: Build.sh
P09_Scoring1/WaterBox_CBS/TestBench/: muon1GeV.mac  proton200MeV.mac
P10_Scoring2/Pixel_Four_Output/TestBench/: P10.ipynb  muon.mac
P11_Multithread_Output/source/: Application_Main.cc  CMakeLists.txt
P11_Multithread_Output/source/include/: Geometry.hh  RunAction.hh  SensitiveVolume.hh  SimData.hh  UserActionInitialization.hh
P11_Multithread_Output/source/src/: Geometry.cc  RunAction.cc  SensitiveVolume.cc  UserActionInitialization.cc
(+29 files in other folders)
